fix: permissions
